[package]
name = "boltdb-rs"
version = "0.1.0"
authors = ["rg <daimaldd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
page_size = "0.4.2"
memmap = "0.7.0"
anyhow = "1.0.31"
thiserror = "1.0"
memoffset = "0.5.6"
rand = "0.8.3"
bitflags = "1.2.1"