[package]
name = "boltdb-rs"
version = "0.1.0"
authors = ["rg <daimaldd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
page_size = "0.4.2"
memmap = "0.7.0"
anyhow = "1.0.31"
thiserror = "1.0"
memoffset = "0.5.6"
rand = "0.8.3"
bitflags = "1.2.1"
parking_lot = "0.11.1"
fnv = "1.0.7"
fs2 = "0.4.3"
either = "1.6.1"
enumflags2 = "0.7.1"
log = {version = "0.4.14", features = ["kv_unstable"]}
kv-log-macro = "1.0.7"
scopeguard = "1.0.0"
defer-lite = "1.0.0"
num_enum = "0.5.7"
[dev-dependencies]
rand = "0.8.4"
env_logger = "0.9.0"
temp-file = "0.1.7"
chrono = "0.4.19"